# jsketcher

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .prettierrc  .project  .releaserc  CHANGELOG.md  Dockerfile  Gruntfile.js  LICENSE  README.md  cypress.json  electron.js  externals.d.ts  gulpfile.js  index.html  jsketcher.code-workspace  oce-build.txt  package-lock.json  package.json  pnpm-lock.yaml  todo  tsconfig.json  webpack.config.dev.js  webpack.config.js
.c9/: project.settings  state.settings
.c9/metadata/: tab1
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE  pull_request_template.md
.github/workflows/: ci.yaml
DevGuide/: index.md  readme.md  snipets-for-modeling-api.js
dev-guide/: index.md  snipets-for-modeling-api.js
misc/: boolean-template.blend  cut.blend  difference.blend  edit-face.blend  extrude.blend  extrude32.blend  intersection.blend  octave-core  perp  plane.blend  proto.m  revolve.blend  shell.blend  simple.m  sketch.blend  solid.blend  sphere.blend  template.blend  union.blend  union32.blend
modules/brep/: brep-builder.js  brep-builder.ts  brep-enclose.js  brep-primitives.js  brep-validator.js  edgeIndex.js  edgeIndex.ts  (+3 more)
scripts/: prepareCMD.sh  setup_tauri_dev_linux.sh  setup_tauri_dev_macos.sh
src/: ViewerApp.tsx  ViewerProvider.tsx  main.tsx  styles.css  viewer-styles.module.css  viewer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: 2d.html  canvas.html  component.html  filemanager.htm  index.html  mouse.html  raycast.html  sandbox.html  sketcher.html  tcl.html  tcltojs.html  test.html
(+1772 files in other folders)
