[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["autodrop3d, xibyte"]
license = "LICENSE"
repository = "https://github.com/xibyte/jsketcher"
default-run = "app"
edition = "2021"
rust-version = "1.64"

[build-dependencies.tauri-build]
version = "1.3.0"
features = []

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "1.3.0"
features = []

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
